mise à jour du deploy & de readme + test deploy.sh

--- a/symfony-backend/public/index.html
+++ b/symfony-backend/public/index.html
@@ -6,7 +6,7 @@
   <title>AngularFrontend</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="./output.css" rel="stylesheet">
+  <link href="./output-6af4927c.css" rel="stylesheet">
 <link rel="stylesheet" href="styles-5INURTSO.css"></head>
 
 <body>
